# platform-control-plane

./: .env  .gitmodules  AGENTS.md  Cargo.toml  README.md  REVIEWER.md  WORK_ORDER.md  docker-compose.yml  justfile
.github/workflows/: ci.yaml
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: lib.rs
backend/crates/domain/src/assistant/: entities.rs  errors.rs  mod.rs  repositories.rs  service.rs  values.rs
backend/crates/domain/src/chat/: errors.rs  messages.rs  mod.rs  port.rs  repositories.rs  service.rs  session.rs  turn.rs  values.rs
backend/crates/domain/src/shared/: mod.rs  paginated.rs  user.rs
backend/crates/infra/: Cargo.toml  build.rs
backend/crates/infra/migrations/: 20251118210230_create_chat_sessions_table.down.sql  20251118210230_create_chat_sessions_table.up.sql  20251125204049_create_chat_messages_table.up.sql  20251126212143_create_assistants_table.up.sql  20251127002809_add_assistant_id_to_chat_sessions.down.sql  20251127002809_add_assistant_id_to_chat_sessions.up.sql  20260110195742_create_model_bindings_table.down.sql  20260110195742_create_model_bindings_table.up.sql  20260114000242_add_chat_messages_index.down.sql  20260114000242_add_chat_messages_index.up.sql  20260117012949_seed_baseline_assistant.down.sql  20260117012949_seed_baseline_assistant.up.sql
backend/crates/infra/src/: config.rs  lib.rs
backend/crates/infra/src/grpc/orchestrator/: client.rs  mapper.rs  mod.rs
backend/crates/infra/src/sqlx/: db.rs  error.rs  mod.rs
backend/crates/infra/src/sqlx/assistant/: repositories.rs  types.rs
backend/crates/infra/src/sqlx/chat/: error.rs  mod.rs  repositories.rs  types.rs
backend/crates/platform-api/: Cargo.toml
backend/crates/platform-api/config/: base.yml  default.yaml
backend/crates/platform-api/src/: app.rs  config.rs  lib.rs  main.rs  middleware.rs  telemetry.rs
backend/crates/platform-api/src/dtos/: assistant.rs  mod.rs
backend/crates/platform-api/src/dtos/chat/: message.rs  mod.rs  session.rs  turn.rs
backend/crates/platform-api/src/middleware/: request_id.rs
backend/crates/platform-api/src/routes/: assistants.rs  mod.rs
backend/crates/platform-api/src/routes/chat/: messages.rs  mod.rs  sessions.rs  turns.rs
backend/crates/platform-api/tests/: test_assistants.rs  test_chat_messages.rs  test_chat_session.rs  test_chat_turns.rs  test_health.rs
backend/crates/platform-api/tests/common/: mod.rs  orchestrator.rs
docker/: platform-api.Dockerfile  platform-api.dev.Dockerfile  platform-api.prod.Dockerfile
proto/aisp/v1/: chat_orchestrator.proto
