[package]
name = "infra"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "postgres", "chrono", "uuid"] }
serde = "1.0.228"
config = "0.15.19"
async-trait = "0.1.89"

domain = { path = "../domain" }

