[package]
name = "infra"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "postgres", "chrono", "uuid", "migrate"] }
serde = "1.0.228"
config = "0.15.19"
async-trait = "0.1.89"
secrecy = { version = "0.10.3", features = ["serde"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
futures = "0.3"
async-stream = "0.3"

domain = { path = "../domain" }
tracing = "0.1.44"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"


