[package]
name = "platform-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

domain = { path = "../domain" }
infra = { path = "../infra" }

[dev-dependencies]
reqwest = "0.12.24"
