[package]
name = "platform-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }

domain = { path = "../domain" }
infra = { path = "../infra" }

[dev-dependencies]
reqwest = { version = "0.12.24", features = ["json"] }
