[package]
name = "platform-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
tracing-opentelemetry = "0.32"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
tower-http = { version = "0.6.8", features = ["trace", "request-id", "util"] }
futures = "0.3.31"

domain = { path = "../domain" }
infra = { path = "../infra" }

[dev-dependencies]
reqwest = { version = "0.12.24", features = ["json"] }
reqwest-eventsource = "0.6.0"
secrecy = { version = "0.10.3", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "postgres", "chrono", "uuid", "migrate"] }
tonic = "0.12"
prost = "0.13"
tokio-stream = "0.1"
async-stream = "0.3"

